test/src/e2e_vm_tests/test_programs/should_fail/storage_in_script/src/main.sw
script;

// Expecting the following error:
//  9 | / storage {
// 10 | |     item: u64,
// 11 | | }
//    | |_^ Declaring storage in a script is not allowed.

storage {
    item: u64,
}

fn main() -> bool {
    false
}
